@@ -10,6 +10,7 @@
 #define HAVE_FLOAT_H         0
 #define HAVE_ALLOCA          0
 #define NEED_ALLOCA_H        0
+#define HAVE_STRERROR        0
 
 #define USE_STDARG           0
 
