@@ -10,6 +10,7 @@
 #define HAVE_FLOAT_H         1
 #define HAVE_ALLOCA          1
 #define NEED_ALLOCA_H        1
+#define HAVE_STRERROR        1
 
 #define USE_STDARG           1
 
